[package]
name = "metaview"
version = "0.1.0"
authors = ["Jakub Hlusička <limeth@protonmail.com>"]
edition = "2018"

[features]
native-example-mapp = [ "example-mapp" ]

[dependencies]
ammolite = { path = "../ammolite", default-features = false }
ammolite-math = { path = "../ammolite/ammolite-math", default-features = false }
vulkano = { path = "../vulkano/vulkano" }
openxr = { path = "../openxrs/openxr" }
# winit = "0.22.0"
winit = { git = "https://github.com/rust-windowing/winit.git" }
paste = "0.1"
smallvec = "0.6.10"
lazy_static = "1.4.0"
specs = "0.15.1"
specs-hierarchy = "0.5.1"
# conrod = { version = "0.51.1", features = [ "piston" ] }
wasmtime-rust = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.2.5"
mlib = { path = "../mlib" }

example-mapp = { path = "../example-mapp", optional = true }
